--- a/src/lib/globals.css
+++ b/src/lib/globals.css
@@ -2,3 +2,25 @@ body {
 	background-color: var(--semantic-color-surface-ground);
 	margin: 0 var(--grid-system-margin);
 }
+
+/* 1. Font faces -------------------- */
+
+/* 1.c Icons */
+@font-face {
+	font-family: 'Phosphor';
+	font-weight: 400;
+	font-style: normal;
+	font-display: block;
+	src:
+		url('./fonts/icons/Phosphor.woff') format('woff'),
+		url('./fonts/icons/Phosphor.woff2') format('woff2');
+}
+@font-face {
+	font-family: 'Phosphor-Fill';
+	font-weight: 400;
+	font-style: normal;
+	font-display: block;
+	src:
+		url('./fonts/icons/Phosphor-Fill.woff') format('woff'),
+		url('./fonts/icons/Phosphor-Fill.woff2') format('woff2');
+}
