--- a/src/lib/globals.css
+++ b/src/lib/globals.css
@@ -15,15 +15,15 @@ body {
 		url('./fonts/display/Cakra.woff2') format('woff2');
 }
 
-/* 1.a Sans serif */
+/* 1.b Sans serif */
 @font-face {
 	font-family: 'Switzer';
 	font-weight: 200;
 	font-style: normal;
 	font-display: block;
 	src:
-		url('./fonts/display/Switzer-Extralight.woff') format('woff'),
-		url('./fonts/display/Switzer-Extralight.woff2') format('woff2');
+		url('./fonts/sans-serif/Switzer-Extralight.woff') format('woff'),
+		url('./fonts/sans-serif/Switzer-Extralight.woff2') format('woff2');
 }
 @font-face {
 	font-family: 'Switzer';
@@ -31,8 +31,8 @@ body {
 	font-style: italic;
 	font-display: block;
 	src:
-		url('./fonts/display/Switzer-ExtralightItalic.woff') format('woff'),
-		url('./fonts/display/Switzer-ExtralightItalic.woff2') format('woff2');
+		url('./fonts/sans-serif/Switzer-ExtralightItalic.woff') format('woff'),
+		url('./fonts/sans-serif/Switzer-ExtralightItalic.woff2') format('woff2');
 }
 @font-face {
 	font-family: 'Switzer';
@@ -40,8 +40,8 @@ body {
 	font-style: normal;
 	font-display: block;
 	src:
-		url('./fonts/display/Switzer-Regular.woff') format('woff'),
-		url('./fonts/display/Switzer-Regular.woff2') format('woff2');
+		url('./fonts/sans-serif/Switzer-Regular.woff') format('woff'),
+		url('./fonts/sans-serif/Switzer-Regular.woff2') format('woff2');
 }
 @font-face {
 	font-family: 'Switzer';
@@ -49,26 +49,26 @@ body {
 	font-style: italic;
 	font-display: block;
 	src:
-		url('./fonts/display/Switzer-Italic.woff') format('woff'),
-		url('./fonts/display/Switzer-Italic.woff2') format('woff2');
+		url('./fonts/sans-serif/Switzer-Italic.woff') format('woff'),
+		url('./fonts/sans-serif/Switzer-Italic.woff2') format('woff2');
 }
 @font-face {
 	font-family: 'Switzer';
-	font-weight: 400;
+	font-weight: 600;
 	font-style: normal;
 	font-display: block;
 	src:
-		url('./fonts/display/Switzer-Semibold.woff') format('woff'),
-		url('./fonts/display/Switzer-Semibold.woff2') format('woff2');
+		url('./fonts/sans-serif/Switzer-Semibold.woff') format('woff'),
+		url('./fonts/sans-serif/Switzer-Semibold.woff2') format('woff2');
 }
 @font-face {
 	font-family: 'Switzer';
-	font-weight: 400;
+	font-weight: 600;
 	font-style: italic;
 	font-display: block;
 	src:
-		url('./fonts/display/Switzer-SemiboldItalic.woff') format('woff'),
-		url('./fonts/display/Switzer-SemiboldItalic.woff2') format('woff2');
+		url('./fonts/sans-serif/Switzer-SemiboldItalic.woff') format('woff'),
+		url('./fonts/sans-serif/Switzer-SemiboldItalic.woff2') format('woff2');
 }
 
 /* 1.c Icons */
